Переделает TCP на UDP Добавит сортировку по местоположению Удалит команду save с клиента Добавит подробное логирование Добавит команду save в консоль сервера